--- a/src/components/UI/InputWithSuggestions/InputWithSuggestions.module.css
+++ b/src/components/UI/InputWithSuggestions/InputWithSuggestions.module.css
@@ -26,7 +26,7 @@
 .suggestion-list.wide {
   translate: 0 -2px;
   left: -30px;
-  width: 330px;
+  width: 380px;
 }
 
 .suggestion-list li {
